--- a/index.html
+++ b/index.html
@@ -1334,5 +1334,54 @@
         <button class="social__btn">Подробнее</button>
       </div>
     </section>
+    <section class="review">
+      <div class="container">
+        <h2 class="review__title title">Отзывы о нас</h2>
+        <div class="review__inner">
+
+          <div class="review__item">
+            <div class="review__img"></div>
+            <div class="review__item-name">Дмитрий Щипунов</div>
+            <a class="review__item-link" href="">web-format.net</a>
+            <p class="review__item-text">
+              Крутотень сайт, только здесь и заказываю! Всем рекомендую
+            </p>
+            <a class="review__item-more" href="#">Подробнее</a>
+          </div>
+
+          <div class="review__item">
+            <div class="review__img"></div>
+            <div class="review__item-name">Дмитрий Щипунов</div>
+            <a class="review__item-link" href="">web-format.net</a>
+            <p class="review__item-text">
+              Крутотень сайт, только здесь и заказываю! Всем рекомендую
+            </p>
+            <a class="review__item-more" href="#">Подробнее</a>
+          </div>
+
+          <div class="review__item">
+            <div class="review__img"></div>
+            <div class="review__item-name">Дмитрий Щипунов</div>
+            <a class="review__item-link" href="">web-format.net</a>
+            <p class="review__item-text">
+              Крутотень сайт, только здесь и заказываю! Всем рекомендую
+            </p>
+            <a class="review__item-more" href="#">Подробнее</a>
+          </div>
+
+          <div class="review__item">
+            <div class="review__img"></div>
+            <div class="review__item-name">Дмитрий Щипунов</div>
+            <a class="review__item-link" href="">web-format.net</a>
+            <p class="review__item-text">
+              Крутотень сайт, только здесь и заказываю! Всем рекомендую
+            </p>
+            <a class="review__item-more" href="#">Подробнее</a>
+          </div>
+          
+        </div>
+        <button class="review__btn">Показать еще отзывы</button>
+      </div>
+    </section>
   </body>
 </html>
