--- a/index.html
+++ b/index.html
@@ -548,6 +548,15 @@
             />
             <input class="content__input" type="text" placeholder="Сообщение" />
             <button class="content__btn">Отправить сообщение</button>
+            <label class="contact-info__label">
+              <input class="contact-info__checkbox" type="checkbox" />
+              <span class="contact-info__span"></span>
+              <div class="contact-info__span-text">
+                Нажимая кнопку "Заказать звонок", я соглашаюсь на обработку моей
+                персональной информации на условиях, определенных политикой в
+                отношении обработки персональных данных.
+              </div>
+            </label>
           </form>
         </div>
       </div>
@@ -1338,7 +1347,6 @@
       <div class="container">
         <h2 class="review__title title">Отзывы о нас</h2>
         <div class="review__inner">
-
           <div class="review__item">
             <div class="review__img"></div>
             <div class="review__item-name">Дмитрий Щипунов</div>
@@ -1378,10 +1386,190 @@
             </p>
             <a class="review__item-more" href="#">Подробнее</a>
           </div>
-          
         </div>
         <button class="review__btn">Показать еще отзывы</button>
       </div>
     </section>
+    <footer class="footer">
+      <div class="container">
+        <h2 class="footer__title">свяжитесь с нами</h2>
+        <p class="footer__subtitle">
+          Для заказа сайта или по любым возникающим вопросам, свяжитесь с нами
+          наиболее удобным для вас способом
+        </p>
+        <div class="footer__inner">
+          <form class="footer__form" action="#">
+            <input class="footer__form-input" type="text" placeholder="Имя" />
+            <input
+              class="footer__form-input"
+              type="text"
+              placeholder="Телефон или Email"
+            />
+            <textarea
+              class="footer__form-textarea"
+              placeholder="Сообщение"
+            ></textarea>
+            <button class="footer__form-btn">Отправить сообщение</button>
+            <label class="contact-info__label">
+              <input class="contact-info__checkbox" type="checkbox" />
+              <span class="contact-info__span"></span>
+              <div class="contact-info__span-text">
+                Нажимая кнопку "Заказать звонок", я соглашаюсь на обработку моей
+                персональной информации на условиях, определенных политикой в
+                отношении обработки персональных данных.
+              </div>
+            </label>
+          </form>
+          <div class="footer__info">
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <div class="footer__list-box">
+                  <svg
+                    width="21"
+                    height="18"
+                    viewBox="0 0 21 18"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M7.61272 4.88971L7.61278 4.88968L7.60988 4.88207C7.26111 3.96842 7.07275 2.99029 7.07275 1.97088C7.07275 1.15336 6.3286 0.605469 5.57275 0.605469H2.07275C1.3169 0.605469 0.572754 1.15336 0.572754 1.97088C0.572754 10.4386 8.4769 17.1828 18.0728 17.1828C18.8286 17.1828 19.5728 16.6349 19.5728 15.8174V12.7971C19.5728 11.9796 18.8286 11.4317 18.0728 11.4317C16.8795 11.4317 15.7165 11.2652 14.6422 10.9583C14.1397 10.8102 13.5617 10.9166 13.1556 11.2681L11.1981 12.9621C8.72211 11.8039 6.68186 10.0565 5.34045 7.94771L7.21995 6.32118C7.65077 5.94834 7.79611 5.39467 7.61272 4.88971Z"
+                      fill="black"
+                      stroke="black"
+                    />
+                  </svg>
+                </div>
+                <a class="footer__list-tel" href="#">8 (800) 555 55 50</a>
+              </li>
+              <li class="footer__list-item">
+                <div class="footer__list-box">
+                  <svg
+                    width="20"
+                    height="16"
+                    viewBox="0 0 20 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <rect
+                      x="1"
+                      y="1.82227"
+                      width="17.009"
+                      height="12.3518"
+                      rx="1"
+                      fill="black"
+                      stroke="black"
+                      stroke-width="2"
+                    />
+                    <path
+                      d="M2.92822 3.45605L9.72912 10.2569L16.2326 3.75343"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                    <path
+                      d="M2.62427 12.6293L7.25558 7.99805"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                    <path
+                      d="M16.5884 12.6217L11.9647 7.99805"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                    />
+                  </svg>
+                </div>
+                <a class="footer__list-mail" href="#">info@untitled.tld</a>
+              </li>
+              <li class="footer__list-item">
+                <div class="footer__list-box">
+                  <svg
+                    width="16"
+                    height="21"
+                    viewBox="0 0 16 21"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M8.0726 1.79199C4.76111 1.79199 2.08282 4.45272 2.08282 7.74249C2.08282 12.2054 8.0726 18.7934 8.0726 18.7934C8.0726 18.7934 14.0624 12.2054 14.0624 7.74249C14.0624 4.45272 11.3841 1.79199 8.0726 1.79199ZM8.0726 9.86767C6.89176 9.86767 5.9334 8.91559 5.9334 7.74249C5.9334 6.56939 6.89176 5.61731 8.0726 5.61731C9.25344 5.61731 10.2118 6.56939 10.2118 7.74249C10.2118 8.91559 9.25344 9.86767 8.0726 9.86767Z"
+                      fill="black"
+                    />
+                  </svg>
+                </div>
+                <p class="footer__list-adress">г. Томск, ул. Обруб 10</p>
+              </li>
+            </ul>
+            <ul class="footer__social-list">
+              <li class="footer__social-item">
+                <a class="footer__social-link" href="#">
+                  <svg
+                    width="15"
+                    height="26"
+                    viewBox="0 0 15 26"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M4.27022 24.9708V13.7966H0.475586V8.68671H4.27022V6.61071C4.27022 3.09752 6.80003 0.0634766 9.96226 0.0634766H14.0731V5.17356H9.96226C9.48791 5.17356 9.01356 5.65266 9.01356 6.61071V8.68671H14.0731V13.7966H9.01356V25.2918C8.5658 25.3319 8.11232 25.3523 7.65413 25.3523C6.49064 25.3523 5.35796 25.2205 4.27022 24.9708Z"
+                      fill="black"
+                    />
+                  </svg>
+                </a>
+              </li>
+              <li class="footer__social-item">
+                <a class="footer__social-link" href="#">
+                  <svg
+                    width="26"
+                    height="16"
+                    viewBox="0 0 26 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M25.6808 13.7479C25.6808 13.6438 25.5815 13.6438 25.5815 13.5396C25.1845 12.7065 24.2911 11.6651 23.0999 10.5195C22.5044 9.99884 22.2066 9.58227 22.008 9.37399C21.7103 8.95743 21.7103 8.64501 21.8095 8.22845C21.9088 7.91603 22.3058 7.39531 23.0007 6.45805C23.3977 5.93734 23.5962 5.62493 23.894 5.31251C25.383 3.22969 26.0778 1.87585 25.8793 1.25101L25.7801 1.14688C25.6808 1.04274 25.5815 0.938598 25.383 0.938598C25.1845 0.834457 24.8867 0.834457 24.5889 0.938598H20.8169C20.7176 0.938598 20.7176 0.938598 20.5191 0.938598C20.4198 0.938598 20.3206 0.938598 20.3206 0.938598H20.2213H20.122L20.0228 1.04273C19.9235 1.14687 19.9235 1.14687 19.9235 1.25101C19.5265 2.39656 19.0301 3.33382 18.5338 4.37523C18.236 4.89593 17.9383 5.41665 17.6405 5.83321C17.3427 6.24977 17.1441 6.56219 16.9456 6.77047C16.7471 6.97875 16.5486 7.08289 16.4493 7.29117C16.35 7.39532 16.1515 7.49946 16.1515 7.39532C16.0523 7.39532 15.953 7.39532 15.953 7.29117C15.8537 7.18703 15.7545 7.08289 15.6552 6.97875C15.5559 6.87461 15.5559 6.66633 15.4567 6.45805C15.4567 6.24976 15.4567 6.04148 15.4567 5.93734C15.4567 5.8332 15.4567 5.52079 15.4567 5.31251C15.4567 5.00008 15.4567 4.7918 15.4567 4.68766C15.4567 4.37523 15.4567 3.95868 15.4567 3.54212C15.4567 3.12555 15.4567 2.81312 15.4567 2.60484C15.4567 2.39656 15.4567 2.08414 15.4567 1.87586C15.4567 1.56344 15.4567 1.35515 15.4567 1.25101C15.4567 1.14687 15.3574 0.938592 15.3574 0.834451C15.2582 0.73031 15.1589 0.626166 15.0596 0.522025C14.9603 0.417885 14.7618 0.417888 14.6626 0.313747C14.1662 0.209606 13.5707 0.105469 12.8758 0.105469C11.2876 0.105469 10.1957 0.209613 9.79867 0.417894C9.60015 0.522035 9.40162 0.626169 9.30236 0.834451C9.10383 1.04273 9.10382 1.14688 9.20309 1.14688C9.6994 1.25102 10.0965 1.45929 10.295 1.77171L10.3943 1.98001C10.4935 2.08415 10.4935 2.29242 10.5928 2.60484C10.692 2.91726 10.692 3.22968 10.692 3.64625C10.692 4.27109 10.692 4.89594 10.692 5.31251C10.692 5.83321 10.5928 6.14562 10.5928 6.45805C10.5928 6.77047 10.4935 6.97875 10.3943 7.0829C10.295 7.29118 10.295 7.39532 10.1957 7.39532C10.1957 7.39532 10.1957 7.49945 10.0964 7.49945C9.99719 7.49945 9.89793 7.6036 9.6994 7.6036C9.60014 7.6036 9.40162 7.49946 9.30236 7.39532C9.10383 7.29118 8.9053 7.0829 8.80604 6.87462C8.60751 6.66634 8.40898 6.3539 8.21045 5.93734C8.01193 5.52078 7.71413 5.10422 7.5156 4.47938L7.31709 4.06282C7.21783 3.85454 7.0193 3.43797 6.82077 2.91727C6.62225 2.39656 6.42372 1.98001 6.22519 1.4593C6.12593 1.25102 6.02667 1.14687 5.92741 1.04273H5.82814C5.82814 1.04273 5.72887 0.938598 5.6296 0.938598C5.53034 0.938598 5.43109 0.834451 5.33183 0.834451H1.75834C1.36129 0.834451 1.16277 0.938588 1.0635 1.04273L0.964233 1.14688C0.964233 1.14688 0.964233 1.25101 0.964233 1.35515C0.964233 1.4593 0.964239 1.56343 1.0635 1.77171C1.55982 3.0214 2.1554 4.2711 2.75098 5.52078C3.34655 6.66633 3.94214 7.70774 4.33919 8.43673C4.83551 9.16571 5.23256 9.8947 5.72887 10.5195C6.22519 11.1444 6.52297 11.5609 6.62224 11.7692C6.82076 11.9775 6.92002 12.0816 7.01928 12.1858L7.31709 12.4982C7.51562 12.7065 7.8134 13.0189 8.21045 13.3313C8.60751 13.6438 9.10382 13.9562 9.60013 14.2686C10.0964 14.581 10.692 14.7893 11.2876 14.9976C11.9825 15.2059 12.578 15.31 13.1736 15.2059H14.6626C14.9604 15.2059 15.1589 15.1017 15.3574 14.8935L15.4567 14.7893C15.4567 14.6852 15.5559 14.6852 15.5559 14.581C15.5559 14.4769 15.5559 14.3728 15.5559 14.1645C15.5559 13.7479 15.5559 13.4355 15.6552 13.1231C15.7545 12.8106 15.7545 12.6024 15.8537 12.3941C15.953 12.1858 16.0523 12.0816 16.1515 11.9775C16.2508 11.8734 16.3501 11.7692 16.3501 11.7692H16.4493C16.6478 11.6651 16.9456 11.7692 17.1441 11.9775C17.4419 12.1858 17.7397 12.4982 17.9382 12.8106C18.1368 13.1231 18.4346 13.4355 18.8316 13.852C19.2287 14.2686 19.5265 14.581 19.725 14.6852L20.0228 14.8935C20.2213 14.9976 20.4198 15.1017 20.7176 15.2059C21.0154 15.31 21.2139 15.31 21.4125 15.31L24.7874 15.2059C25.0852 15.2059 25.383 15.1017 25.5815 14.9976C25.78 14.8935 25.8793 14.7893 25.8793 14.581C25.8793 14.4769 25.8793 14.2686 25.8793 14.1645C25.6808 13.9562 25.6808 13.852 25.6808 13.7479Z"
+                      fill="black"
+                    />
+                  </svg>
+                </a>
+              </li>
+              <li class="footer__social-item">
+                <a class="footer__social-link" href="#">
+                  <svg
+                    width="20"
+                    height="21"
+                    viewBox="0 0 20 21"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M16.9241 0.773438H2.89569C1.31184 0.773438 0.105103 1.98018 0.105103 3.56403V17.5924C0.105103 19.1762 1.31184 20.383 2.89569 20.383H16.9241C18.5079 20.383 19.7146 19.1762 19.7146 17.5924V3.56403C19.7146 1.98018 18.5079 0.773438 16.9241 0.773438ZM9.90987 16.4611C13.153 16.4611 15.7927 13.8967 15.7927 10.8045C15.7927 10.2765 15.7173 9.67315 15.5665 9.22062H17.2257V17.2153C17.2257 17.5924 16.9241 17.9695 16.4715 17.9695H3.34822C2.97111 17.9695 2.59401 17.6678 2.59401 17.2153V9.1452H4.3287C4.17786 9.67315 4.10243 10.2011 4.10243 10.7291C4.02701 13.8967 6.66676 16.4611 9.90987 16.4611ZM9.90987 14.1984C7.79808 14.1984 6.13881 12.5392 6.13881 10.5028C6.13881 8.46641 7.79808 6.80714 9.90987 6.80714C12.0217 6.80714 13.6809 8.46641 13.6809 10.5028C13.6809 12.6146 12.0217 14.1984 9.90987 14.1984ZM17.1503 6.12835C17.1503 6.58088 16.7732 6.95799 16.3207 6.95799H14.2089C13.7564 6.95799 13.3793 6.58088 13.3793 6.12835V4.09197C13.3793 3.63945 13.7564 3.26234 14.2089 3.26234H16.3207C16.7732 3.26234 17.1503 3.63945 17.1503 4.09197V6.12835Z"
+                      fill="black"
+                    />
+                  </svg>
+                </a>
+              </li>
+              <li class="footer__social-item">
+                <a class="footer__social-link" href="#">
+                  <svg
+                    width="19"
+                    height="20"
+                    viewBox="0 0 19 20"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M15.7903 3.47565C14.0572 1.74856 11.7464 0.789062 9.30723 0.789062C4.23627 0.789062 0.128153 4.88292 0.128153 9.93627C0.128153 11.5354 0.57748 13.1346 1.34775 14.4779L0.0639648 19.2114L4.94236 17.9321C6.29033 18.6357 7.76668 19.0195 9.30723 19.0195C14.3782 19.0195 18.4863 14.9257 18.4863 9.8723C18.4221 7.50554 17.5235 5.20275 15.7903 3.47565ZM13.7363 13.1986C13.5437 13.7103 12.6451 14.222 12.1957 14.286C11.8106 14.35 11.2971 14.35 10.7836 14.222C10.4626 14.0941 10.0133 13.9662 9.4998 13.7103C7.18898 12.7508 5.71263 10.448 5.58425 10.2561C5.45587 10.1282 4.62141 9.04074 4.62141 7.88934C4.62141 6.73794 5.19911 6.22621 5.39168 5.97034C5.58425 5.71448 5.841 5.71448 6.03357 5.71448C6.16195 5.71448 6.35452 5.71448 6.4829 5.71448C6.61128 5.71448 6.80384 5.65051 6.99641 6.09828C7.18898 6.54604 7.63831 7.69744 7.70249 7.76141C7.76668 7.88934 7.76668 8.01727 7.70249 8.14521C7.63831 8.27314 7.57412 8.40107 7.44574 8.529C7.31736 8.65694 7.18898 8.84883 7.12479 8.9128C6.99641 9.04073 6.86803 9.16867 6.99641 9.36057C7.12479 9.61643 7.57412 10.3201 8.2802 10.9597C9.17885 11.7273 9.88493 11.9832 10.1417 12.1111C10.3984 12.2391 10.5268 12.1751 10.6552 12.0472C10.7836 11.9192 11.2329 11.4075 11.3613 11.1516C11.4897 10.8958 11.6822 10.9597 11.8748 11.0237C12.0674 11.0877 13.2228 11.6634 13.4153 11.7913C13.6721 11.9192 13.8005 11.9832 13.8647 12.0472C13.9289 12.2391 13.9289 12.6868 13.7363 13.1986Z"
+                      fill="black"
+                    />
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
