added media header

--- a/index.html
+++ b/index.html
@@ -67,6 +67,32 @@
                 </li>
               </ul>
             </div>
+            <button class="header-nav__btn-hamburger">
+              <svg
+                width="25"
+                height="23"
+                viewBox="0 0 25 23"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <rect x="0.545898" width="24" height="2" fill="#FF2210" />
+                <rect x="0.545898" y="7" width="24" height="2" fill="#FF2210" />
+                <rect
+                  x="0.545898"
+                  y="14"
+                  width="24"
+                  height="2"
+                  fill="#FF2210"
+                />
+                <rect
+                  x="0.545898"
+                  y="21"
+                  width="24"
+                  height="2"
+                  fill="#FF2210"
+                />
+              </svg>
+            </button>
           </div>
         </div>
       </div>
@@ -96,6 +122,7 @@
         </div>
       </div>
     </header>
+    <!--
     <section class="info">
       <div class="container">
         <div class="info__inner">
@@ -1571,5 +1598,6 @@
         </div>
       </div>
     </footer>
+    -->
   </body>
 </html>
