added media 375px

--- a/index.html
+++ b/index.html
@@ -1615,5 +1615,7 @@
         </div>
       </div>
     </footer>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
